fixed right-pane scrolling bug
Most code edits are cleanup. Modifying the children of an overflow:scroll <div>
preserves the scroll position. Reconstructing the <div> itself does not.

--- a/client/www/disembark.html
+++ b/client/www/disembark.html
@@ -50,7 +50,7 @@
     </div>
   </div>
   <div class="hbox flex1 whitePanel">
-    <div style="overflow: scroll" class="thrity flex1">
+    <div style="overflow: scroll" class="thirty flex1">
       <div id="applicantTable"><div id="rows"></div></div>
     </div>
     <div class="thirty flex3 vbox detailPane">
@@ -59,8 +59,12 @@
     <div class="thirty flex3 vbox detailPane packCenter">
       <div id="ratingPane"></div>
       <div id="highlightPane"></div>
-      <div id="commentsPane">
-        <div class="placeholder">Select an application on the left</div>
+
+      <div id="commentsPane" class="vbox flex1">
+        <div style="overflow: scroll" class="flex1">
+        <div id="commentDisp"></div>
+        </div>
+        <div id="commentCompose" class="hbox"></div>
       </div>
     </div>
   </div>
