--- a/client/www/disembark.html
+++ b/client/www/disembark.html
@@ -53,7 +53,8 @@
     <div style="overflow: scroll" class="thirty flex1">
       <div id="applicantTable"><div id="rows"></div></div>
     </div>
-    <div class="thirty flex3 vbox detailPane">
+    <div class="thirty flex3 vbox detailPane" 
+         style="padding-left: 5px; padding-right: 5px; border-left: 1px solid black; border-right: 1px solid black">
       <div id="infoPane"></div>
     </div>
     <div class="thirty flex3 vbox detailPane packCenter">
