use tables to layout comments; slightly better resizing in FF
FF is better with tables

--- a/client/www/disembark.html
+++ b/client/www/disembark.html
@@ -49,7 +49,7 @@
       <div id="vises"></div>
     </div>
   </div>
-  <div class="hbox flex1 whitePanel">
+  <div id="ffResizeChildren" class="hbox flex1 whitePanel">
     <div style="overflow: scroll" class="thirty flex1">
       <div id="applicantTable"><div id="rows"></div></div>
     </div>
