banner: username and cosmetic logout button

--- a/client/www/disembark.html
+++ b/client/www/disembark.html
@@ -40,6 +40,11 @@
 
 <div id="mainPanel" class="vbox" style="display: none">
   <div class="grayPanel vbox">
+    <div id="banner" class="hbox">
+      <div>Brown University | Department of Computer Science</div>
+      <div id="friendly" class="flex1" style="text-align: right"></div>
+      <div><a href="#" id="logout">Logout</a></div>
+    </div>
     <div id="showHideFilters" class="buttonLink">▼ Filters</div>
     <div class="vbox" id="filterDetail">
       <div>
