better formatting for firefox

--- a/client/www/disembark.html
+++ b/client/www/disembark.html
@@ -67,7 +67,7 @@
          style="padding-left: 5px; padding-right: 5px; border-left: 1px solid black; border-right: 1px solid black">
       <div id="infoPane"></div>
     </div>
-    <div class="thirty flex3 vbox detailPane packCenter">
+    <div id="col3" class="thirty flex3 vbox detailPane packCenter">
       <div id="ratingPane"></div>
       <div id="highlightPane"></div>
 
