fixed compose text area disppearing and setting scores bug

--- a/client/www/disembark.html
+++ b/client/www/disembark.html
@@ -71,14 +71,27 @@
       <div id="ratingPane"></div>
       <div id="highlightPane"></div>
 
-      <div id="commentsPane" class="vbox flex1">
-        <div style="overflow: scroll" class="flex1">
-        <div id="commentDisp"></div>
-        </div>
-        <div id="commentCompose" class="hbox"></div>
+
+<div id="commentsPane" class="vbox flex1">
+
+<div style="overflow: scroll" class="flex1"><div id="commentDisp"></div></div>
+
+<div id="commentCompose" class="hbox">
+<div class="flex1">
+<div class="ctrl">
+<textarea id="composeTextarea" rows="5" class="fill" placeholder="Compose">
+</textarea>
+</div>
+</div>
+<input id="postComment" class="fill" type="button" value="Send">
+</div>
+
+
+
       </div>
     </div>
   </div>
+
 </div>
 
 <div id="passwordPanel" style="display:none; background-color: white">
