--- a/client/www/disembark.html
+++ b/client/www/disembark.html
@@ -45,7 +45,7 @@
 <div id="mainPanel" class="vbox" style="display: none">
   <div class="grayPanel vbox">
     <div id="banner" class="hbox">
-      <div>Brown University | Department of Computer Science</div>
+      <div>University of Massachusetts | School of Computer Science</div>
       <div id="friendly" class="flex1" style="text-align: right"></div>
       <div><a href="#" id="pass">Change Password</a></div>
       <div><a href="#" id="logout">Logout</a></div>
