Refactored to use TypeScript

--- a/client/src/disembark.html
+++ b/client/src/disembark.html
@@ -115,8 +115,8 @@
 
 </div>
 
-<script src="apply.min.js"></script>
-
+<script data-main="disembark" src="require.js"></script>
+{}
 </body>
 
 </html>
