--- a/www/disembark.html
+++ b/www/disembark.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+  <title>Apply2: UMass Computer Science Applicant Reviewing</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
   <link href="disembark.css" rel="stylesheet">
