--- a/www/disembark.html
+++ b/www/disembark.html
@@ -60,7 +60,7 @@
       <div style="overflow: scroll" class="thirty flex1">
         <div id="applicantTable"><div id="rows"></div></div>
       </div>
-      <div class="thirty flex3 vbox detailPane" 
+      <div class="thirty flex3 vbox detailPane scroll" 
       style="padding-left: 5px; padding-right: 5px; border-left: 1px solid black; border-right: 1px solid black">
       <div id="infoPane"></div>
     </div>
