--- a/www/disembark.html
+++ b/www/disembark.html
@@ -53,6 +53,7 @@
           <span id="copyFilters" class="buttonLink">Link to Filter</span>
         </div>
         <div id="filterPanel"></div>
+        <div><span style="background-color: yellow" id="itemCount"></span></div>
         <div id="vises"></div>
       </div>
     </div>
